# eternitate

./: .replit  pyproject.toml  replit.nix
attached_assets/: Pasted--Cerin-e-pentru-Dezvoltarea-Aplica-iei-Eternitate-Rezumat-General-Aplica-ia-Eternitate--1743250489477.txt
eternitate/: db.sqlite3  manage.py  manage_assets.py  run.py  tailwind.config.js
eternitate/accounts/: adapters.py  admin.py  forms.py  models.py  urls.py  views.py
eternitate/accounts/migrations/: 0001_initial.py  __init__.py
eternitate/eternitate/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
eternitate/media/memorials/videos/2025/03/: Screen_Recording_2025-03-29_at_14.49.57.mov
eternitate/memorials/: __init__.py  admin.py  forms.py  models.py  urls.py  utils.py  views.py
eternitate/memorials/migrations/: 0001_initial.py  0002_memorial_background_image_memorial_profile_image.py  __init__.py
eternitate/static/css/: styles.css  tailwind-input.css
eternitate/staticfiles/js/: htmx.min.js  main.js  memorial.js
eternitate/templates/: 404.html  500.html  base.html  home.html
eternitate/templates/account/: login.html  signup.html  signup_closed.html
eternitate/templates/accounts/: login.html  profile.html  signup.html
eternitate/templates/memorials/: edit_memorial.html  enter_code.html  memorial_detail.html  photo_gallery.html  register_memorial.html  timeline.html  tributes.html  video_gallery.html
